<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:example="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            style="@style/Toolbar"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/guillotine_hamburger"
                style="@style/ImageView.Hamburger"
                android:src="@drawable/ic_menu"/>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/activity_group"
            style="@style/LinearLayout.GuillotineItem"
            >

            <ImageView
                android:id="@+id/home_icon"
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_action_house_active"/>

            <uk.co.ribot.androidboilerplate.views.FontTextView
                android:id="@+id/home_tittle"
                style="@style/TextView.GuillotineItem.Selected"
                android:text="@string/activity"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/electronic_group"
            style="@style/LinearLayout.GuillotineItem"
            >

            <ImageView
                android:id="@+id/elec_icon"
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_action_ads"/>

            <uk.co.ribot.androidboilerplate.views.FontTextView
                android:id="@+id/elec_tittle"
                style="@style/TextView.GuillotineItem"
                android:text="@string/electronics"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/furniture_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                android:id="@+id/furniture_icon"
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_action_jobs"/>

            <uk.co.ribot.androidboilerplate.views.FontTextView
                android:id="@+id/furniture_tittle"
                style="@style/TextView.GuillotineItem"
                android:text="@string/furniture"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/upload_news_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_upload_news"/>

            <uk.co.ribot.androidboilerplate.views.FontTextView
                android:id="@+id/upload_news_tittle"
                style="@style/TextView.GuillotineItem"
                android:text="Upload News"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/contactus_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_action_furniture"/>

            <uk.co.ribot.androidboilerplate.views.FontTextView
                android:id="@+id/epaper_tittle"
                style="@style/TextView.GuillotineItem"
                android:text="Contact Us"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/settings_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_action_gear"/>

            <uk.co.ribot.androidboilerplate.views.FontTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/settings"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more_root"
            style="@style/LinearLayout.GuillotineItem">

            <uk.co.ribot.androidboilerplate.views.ExpandablePanel
                android:id="@+id/expadable_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                example:animationDuration="100"
                example:content="@+id/value"
                example:handle="@+id/expand">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@id/value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/ajab_gajab_group"
                            style="@style/LinearLayout.GuillotineItem"
                            >

                            <ImageView
                                style="@style/ImageView.GuillotineItem"
                                android:src="@drawable/ic_action_plug"/>

                            <uk.co.ribot.androidboilerplate.views.FontTextView
                                android:id="@+id/ajab_gajab_group_tittle"
                                style="@style/TextView.GuillotineItem"
                                android:text="@string/ajab_gajab"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/desh_group"
                            style="@style/LinearLayout.GuillotineItem"
                            >

                            <ImageView
                                style="@style/ImageView.GuillotineItem"
                                android:src="@drawable/ic_action_plug"/>

                            <uk.co.ribot.androidboilerplate.views.FontTextView
                                android:id="@+id/desh_tittle"
                                style="@style/TextView.GuillotineItem"
                                android:text="@string/desh"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/videsh_group"
                            style="@style/LinearLayout.GuillotineItem"
                            >

                            <ImageView
                                style="@style/ImageView.GuillotineItem"
                                android:src="@drawable/ic_action_plug"/>

                            <uk.co.ribot.androidboilerplate.views.FontTextView
                                android:id="@+id/videsh_tittle"
                                style="@style/TextView.GuillotineItem"
                                android:text="@string/videsh"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/rashifal_group"
                            style="@style/LinearLayout.GuillotineItem"
                            >

                            <ImageView
                                style="@style/ImageView.GuillotineItem"
                                android:src="@drawable/ic_action_plug"/>

                            <uk.co.ribot.androidboilerplate.views.FontTextView
                                android:id="@+id/rashifal_tittle"
                                style="@style/TextView.GuillotineItem"
                                android:text="@string/rashifal"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/health_tips_group"
                            style="@style/LinearLayout.GuillotineItem"
                            >

                            <ImageView
                                style="@style/ImageView.GuillotineItem"
                                android:src="@drawable/ic_action_plug"/>

                            <uk.co.ribot.androidboilerplate.views.FontTextView
                                android:id="@+id/health_tips_tittle"
                                style="@style/TextView.GuillotineItem"
                                android:text="@string/health_tips"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/election_keeda_group"
                            style="@style/LinearLayout.GuillotineItem"
                            >

                            <ImageView
                                style="@style/ImageView.GuillotineItem"
                                android:src="@drawable/ic_action_plug"/>

                            <uk.co.ribot.androidboilerplate.views.FontTextView
                                android:id="@+id/election_keeda_tittle"
                                style="@style/TextView.GuillotineItem"
                                android:text="@string/election_keeda"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@id/expand"
                        style="@style/LinearLayout.GuillotineItem"
                        android:layout_below="@id/value">

                        <ImageView
                            android:id="@+id/more_icon"
                            style="@style/ImageView.GuillotineItem"
                            android:src="@drawable/ic_action_more"/>

                        <uk.co.ribot.androidboilerplate.views.FontTextView
                            android:id="@+id/more_text"
                            style="@style/TextView.GuillotineItem"
                            android:text="MORE"/>
                    </LinearLayout>
                </RelativeLayout>
            </uk.co.ribot.androidboilerplate.views.ExpandablePanel>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
